[UPDATE] : Ajout d'un effet de transition des composant de pages

--- a/src/styles/square.css
+++ b/src/styles/square.css
@@ -17,6 +17,11 @@
 }
 
 .square {
+  font-family: 'Roboto', Arial, sans-serif;
+  color: #333;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
   position: fixed;
   top: 0;
   right: 0;
