--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -67,3 +67,18 @@
 .project-carousel .carousel .control-next.control-arrow {
   right: 10px;
 }
+
+.project-carousel .carousel .slide.error {
+  background-color: #f8d7da;
+  border: 2px solid #f5c6cb;
+}
+
+.project-carousel .carousel .slide.waiting {
+  background-color: #fff3cd;
+  border: 2px solid #ffeeba;
+}
+
+.project-carousel .carousel .slide.complete {
+  background-color: #d4edda;
+  border: 2px solid #c3e6cb;
+}
