--- a/src/styles/neon.css
+++ b/src/styles/neon.css
@@ -7,11 +7,11 @@
 
 @keyframes neon-animation {
   0%, 100% {
-    border-color: var(--neon-color-1); /* Début et fin de l'animation avec la couleur 1 */
+    border-color: var(--neon-color-1);
     box-shadow: 0 0 2px var(--neon-color-1), 0 0 3px var(--neon-color-1), 0 0 4px var(--neon-color-1), 0 0 5px var(--neon-color-1), 0 0 6px var(--neon-color-1), 0 0 7px var(--neon-color-1), 0 0 8px var(--neon-color-1), 0 0 9px var(--neon-color-1);
   }
   50% {
-    border-color: var(--neon-color-2); /* Milieu de l'animation avec la couleur 2 */
+    border-color: var(--neon-color-2);
     box-shadow: 0 0 2px var(--neon-color-2), 0 0 3px var(--neon-color-2), 0 0 4px var(--neon-color-2), 0 0 5px var(--neon-color-2), 0 0 6px var(--neon-color-2), 0 0 7px var(--neon-color-2), 0 0 8px var(--neon-color-2), 0 0 9px var(--neon-color-2);
   }
 }
