[UPDATE]: Amélioration du Content.js

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -63,7 +63,8 @@ h2 {
 }
 
 .down-arrow {
-  display: block;
+  display: flex;
+  justify-content: center;
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
@@ -72,6 +73,12 @@ h2 {
   border: none;
   font-size: 24px;
   cursor: pointer;
+}
+
+.down-arrow:hover {
+  color: var(--link-hover-color);
+  transform: scale(1.2);
+  transition: transform 0.2s, color 0.2s;
 }
 
 .animated-article + .down-arrow {
