--- a/src/styles/square.css
+++ b/src/styles/square.css
@@ -17,7 +17,7 @@
 }
 
 .square {
-  font-family: 'Roboto', Arial, sans-serif;
+
   color: #333;
   background-color: #f4f4f4;
   margin: 0;
@@ -31,7 +31,7 @@
   background-color: white;
   transition: width 0.5s ease-in-out, transform 0.5s ease-in-out;
   transform: translateX(100%);
-  overflow-y: auto;
+  overflow-y: auto; /* Ajoute cette propriété pour activer le scroll interne */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,9 @@
 .square.show {
   width: 85%;
   transform: translateX(0%);
+  overflow-y: auto; /* Active le scroll quand le panneau est visible */
 }
+
 
 .square.hide {
   width: 0;
@@ -52,14 +54,12 @@
 .square h1 {
   color: black;
   font-size: 2.5em;
-  font-family: Arial, sans-serif;
   text-align: center;
   margin: 20px 0;
 }
 
 .square .content {
   padding: 20px;
-  font-family: Arial, sans-serif;
   font-size: 1em;
   color: #333;
   line-height: 1.6em;
@@ -94,60 +94,4 @@
 
 #closeButton:hover {
   background-color: #cc0000;
-}
-
-/* Partie project */
-.square .project {
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.square .project h3 {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.square .project p {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #666;
-}
-
-#error-color {
-  background-color: #FFCCCC;
-}
-
-#waiting-color {
-  background-color: #FFF4CC;
-}
-
-#complete-color {
-  background-color: #DFF2BF;
-}
-
-/* Styles pour les légendes */
-.legend-container {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-
-.legend-item {
-  display: flex;
-  align-items: center;
-  margin: 0 15px;
-}
-
-.legend-color {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.legend-text {
-  font-size: 1rem;
-  color: #333;
 }
